add load spinner

--- a/src/components/AzureCognitiveServices/ImageAnalysis.module.css
+++ b/src/components/AzureCognitiveServices/ImageAnalysis.module.css
@@ -2,7 +2,8 @@
   border: 1.5px solid white;
   margin-top: 40px;
   margin-bottom: 30px;
-  width: 400px;
+  width: 450px;
   height: auto;
   border-radius: 9px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
