--- a/src/components/AzureCognitiveServices/ImageAnalysis.module.css
+++ b/src/components/AzureCognitiveServices/ImageAnalysis.module.css
@@ -1,9 +1,24 @@
+.card {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 .img {
   border: 1.5px solid white;
   margin-top: 40px;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
   width: 450px;
   height: auto;
   border-radius: 9px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.textHeader {
+  font-weight: bold;
+  color: black;
+}
+.text {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: black;
 }
