--- a/src/components/AzureCognitiveServices/ImageAnalysis.module.css
+++ b/src/components/AzureCognitiveServices/ImageAnalysis.module.css
@@ -7,7 +7,7 @@
   border: 1.5px solid white;
   margin-top: 40px;
   margin-bottom: 40px;
-  width: 450px;
+  width: 550px;
   height: auto;
   border-radius: 9px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -21,4 +21,35 @@
   margin-top: 10px;
   margin-bottom: 10px;
   color: black;
+}
+
+@media (max-width: 600px) {
+  .img {
+    width: 450px;
+  }
+}
+@media (max-width: 500px) {
+  .img {
+    width: 400px;
+  }
+}
+@media (max-width: 450px) {
+  .img {
+    width: 390px;
+  }
+}
+@media (max-width: 400px) {
+  .img {
+    width: 380px;
+  }
+}
+@media (max-width: 380px) {
+  .img {
+    width: 360px;
+  }
+}
+@media (max-width: 365px) {
+  .img {
+    width: 345px;
+  }
 }
