--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-image: radial-gradient(circle farthest-side, #fceabb, #f8b500);
 }
 
 .App-logo {
@@ -14,14 +15,13 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .App-link {
@@ -32,12 +32,14 @@ form img,
 form button {
   width: 165px;
   height: 165px;
+  border: 1.25px solid #F0ECE8;
   border-radius: 50%;
   cursor: pointer;
   background-color: #61dafb;
   font-weight: bold;
   font-size: 18px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  color: #FCFBFA;
 }
 
 @keyframes App-logo-spin {
