--- a/src/components/AzureCognitiveServices/ImageAnalysis.module.css
+++ b/src/components/AzureCognitiveServices/ImageAnalysis.module.css
@@ -1,10 +1,10 @@
 .card {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  border: 2px solid #F0ECE8;
 }
 
 .img {
-  border: 1.5px solid white;
+  border: 2px solid #F0ECE8;
   margin-top: 40px;
   margin-bottom: 40px;
   width: 565px;
